frontend/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}


.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


/*************** Full Window **************/

.fill-window {
  height: 99vh;
  width: 100vw;
  top:0;
  left: 0;
  position: absolute;
  overflow: hidden;
}

/*************** Main Title (Above Tab) **************/

.main-title-area{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  height: fit-content;
  padding: 10px 10px 0 10px;
  text-align: left;
}

.main-title-area h1{
  margin-left: 15px;
}

.main-title-area button{
  float: right;
  margin-right: 5px;
  height: 40px;
}

.tab-area{
  width: 100%;
  height: 100%;
}


/*************** Common for ALL **************/


.dropDown {
  width: 400px
}

.box-container{
  width: 75%;
  height: 80vh;
  margin: auto;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.selection-area{
  width: 15vw;
  height: auto;
  min-width: 250px;
  padding: 50px 20px;
  border: 1px solid #dee2e6;
}

.selection-area button{
  width: 100%;
  margin-top: 20px;
}

.data-table{
  width: 55vw;
  height: auto;
  border: 1px solid #dee2e6;
}

.table-scroll{
  width: 100% ;
  height: 100%;
  overflow: scroll;
}


/*************** Only for Pupil **************/

.selection-area-pupil{
  width: 15vw;
  height: auto;
  min-width: 250px;
  padding: 50px 20px;
  border: 1px solid #dee2e6;
}

.selection-area-pupil button{
  width: 100%;
}


/*************** Only for ManageTest ****************/

.tab-area .subtitle-area{
  width: 75%;
  display: flex;
  flex-direction: row;
  margin: auto;
}

.tab-area .subtitle-area button{
  width: 150px;
  height:fit-content;
  margin-top: 20px;
}

.tab-area .upload-area{
  width: 100%;
  margin-top: 30vh;
  display: flex;
  flex-direction: column;
}

.tab-area .upload-area #browse{
  width: 50%;
  height: fit-content;
}

.tab-area .upload-area #delete{
  width: 50%;
  height: fit-content;
}

/*************** Common PopUp for ALL **************/

.popup {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  background-color: rgba(0,0,0, 0.5);
}

.popup_inner {
  width: 35%;
  height: fit-content;
  min-width: 650px;
  padding: 0;
  position: absolute;
  left: 25%;
  right: 25%;
  top: 25%;
  bottom: 25%;
  margin: auto;
  background: white;
  border-radius: 20px;
  text-align: left;
}

.popup_inner h2{
  text-align: center;
}


.custom_pop{
  width: 80%;
  height: fit-content;
  margin: auto;
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: space-evenly;
  padding: 50px 50px 80px 50px;
  border: 0px solid #dee2e6;
  border-radius: 20px;
}

.custom_pop button{
   width: 100px;
   height: auto;
}

.custom_pop .popup-button-area{
  width: 220px;
  height: auto;
  margin-top: 30px;
  display: flex;
  flex-direction: row;
  align-content: center;
  justify-content: space-between;
}

